test/classes/constructors/error-constructor-return-type.chpl
class C{}
proc C.C():unmanaged C {}
